--- a/src/scss/core/_useFullClass.scss
+++ b/src/scss/core/_useFullClass.scss
@@ -1,68 +1,68 @@
 @charset "utf-8";
 
-.x-b-c {
+.b-c {
   margin: 0 auto;
 }
 
-.x-t-r {
+.t-r {
   text-align: right;
 }
 
-.x-t-c {
+.t-c {
   text-align: center;
 }
 
-.x-f-l {
+.f-l {
   float: left;
 }
 
-.x-f-r {
+.f-r {
   float: right;
 }
 
-.x-p-a {
+.p-a {
   position: absolute;
 }
 
-.x-p-r {
+.p-r {
   position: relative;
 }
 
 /* 提供 5 - 50 的 padding/margin 简写 */
 @for $i from 1 through 10 {
   .p-t-#{$i*5} {
-    padding-top: $i*5px;
+    padding-top: $i * 5px;
   }
   .p-b-#{$i*5} {
-    padding-bottom: $i*5px;
+    padding-bottom: $i * 5px;
   }
   .p-r-#{$i*5} {
-    padding-right: $i*5px;
+    padding-right: $i * 5px;
   }
   .p-l-#{$i*5} {
-    padding-left: $i*5px;
+    padding-left: $i * 5px;
   }
   .m-t-#{$i*5} {
-    margin-top: $i*5px;
+    margin-top: $i * 5px;
   }
   .m-b-#{$i*5} {
-    margin-bottom: $i*5px;
+    margin-bottom: $i * 5px;
   }
   .m-r-#{$i*5} {
-    margin-right: $i*5px;
+    margin-right: $i * 5px;
   }
   .m-l-#{$i*5} {
-    margin-left: $i*5px;
+    margin-left: $i * 5px;
   }
 }
 
 // 提供 12 - 40 双字号的简写
 @for $i from 0 through 11 {
-  .f-s-#{$i*2+18} {
-    font-size: $i*2+18px;
+  .f-s-#{$i*2 + 18} {
+    font-size: $i * 2+18px;
   }
 }
 
 .t-in-one-line {
-  @include ellipsis()
+  @include ellipsis();
 }
