--- a/src/scss/core/_buttonGroups.scss
+++ b/src/scss/core/_buttonGroups.scss
@@ -74,7 +74,7 @@
 
 // 规定按下的按钮的样式
 .btn-group.open {
-  box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125); // Show no shadow for `.btn-link` since it has no other button styles.
+  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125); // Show no shadow for `.btn-link` since it has no other button styles.
   &.btn-link {
     box-shadow: none;
   }
@@ -131,7 +131,9 @@
   }
 }
 
-.btn-group-vertical > .btn-group:last-of-type:not(:first-child) > .btn:first-child {
+.btn-group-vertical
+  > .btn-group:last-of-type:not(:first-child)
+  > .btn:first-child {
   @include b-radius(0, 0, null, null);
 }
 
