--- a/src/scss/core/_buttons.scss
+++ b/src/scss/core/_buttons.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-@import "./mixin/button";
+@import './mixin/button';
 
 // Buttons
 // Base styles 初始类，用于button元素
@@ -18,7 +18,11 @@
   white-space: nowrap;
   user-select: none;
   box-sizing: border-box;
-  @include button-variant($btn-default-color, $btn-default-bg, $btn-default-border);
+  @include button-variant(
+    $btn-default-color,
+    $btn-default-bg,
+    $btn-default-border
+  );
 
   &,
   &:active,
@@ -41,14 +45,14 @@
   &.active {
     outline: 0;
     background-image: none;
-    box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   }
 
   &.disabled,
   &[disabled] {
     cursor: not-allowed;
     box-shadow: none;
-    opacity: .65;
+    opacity: 0.65;
   }
 }
 
@@ -66,7 +70,7 @@ a.btn {
 
 @mixin make-button-list($color-list) {
   @each $name, $color in $color-list {
-    .btn-#{''+$name} {
+    .btn-#{'' + $name} {
       @include button-variant(#fff, $color, darken($color, 10%));
     }
   }
