--- a/src/scss/core/_init.scss
+++ b/src/scss/core/_init.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
-@import "./mixin/mixin";
-@import "./variables";
-@import "./normalize";
-@import "./flexHelp";
-@import "./useFullClass";
+@import './mixin/mixin';
+@import './variables';
+@import './normalize';
+@import './flexHelp';
+@import './useFullClass';
