--- a/src/scss/core/mixin/_button.scss
+++ b/src/scss/core/mixin/_button.scss
@@ -60,7 +60,13 @@
 }
 
 // Button 大小调整
-@mixin button-size($padding-vertical, $padding-horizontal, $font-size, $line-height, $border-radius) {
+@mixin button-size(
+  $padding-vertical,
+  $padding-horizontal,
+  $font-size,
+  $line-height,
+  $border-radius
+) {
   padding: $padding-vertical $padding-horizontal;
   font-size: $font-size;
   line-height: $line-height;
