--- a/src/scss/time.scss
+++ b/src/scss/time.scss
@@ -1,4 +1,9 @@
 .time {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  top: 0;
+  left: 0;
   > canvas {
     @include posi(0, 0);
     width: 100%;
