--- a/src/scss/audio.scss
+++ b/src/scss/audio.scss
@@ -3,15 +3,14 @@
   border-radius: 25px;
   background: #eee;
   cursor: pointer;
-  position: relative;
+  @include posi(50%, 50%);
+  transform: translate3d(-50%, -50%, 0);
+  opacity: 0.6;
   audio {
     display: none;
   }
   .icon {
     @include circle(50px);
     opacity: 0.8;
-  }
-  .p-a {
-    left: 0;
   }
 }
