--- a/src/scss/music.scss
+++ b/src/scss/music.scss
@@ -5,6 +5,9 @@
     .season-box {
       flex: 0 0 50%;
       @include size(50%, 100%);
+      canvas {
+        @include square(100%);
+      }
     }
   }
 }
