--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,6 +1,6 @@
 @import 'core/init';
 @import './app';
 @import './season';
-@import './canvas';
+@import './wwsty';
 @import './audio';
 @import './music';
