--- a/src/scss/season.scss
+++ b/src/scss/season.scss
@@ -1,10 +1,52 @@
 .all-about-you {
-  @include square(100%);
+  height: 100%;
   .aay-top {
-    @include size(100%, 100%);
+    height: 100%;
+    > div {
+      height: 100%;
+      .all {
+        @include posi(0, 0);
+        @include square(100%);
+      }
+      .season-wrap {
+        height: 100%;
+        background-size: cover;
+        &.summer {
+          background-image: url(../assert/bg/summer.jpg);
+        }
+        &.autumn{
+          background-image: url(../assert/bg/autumn.jpg);
+        }
+        &.winter{
+          background-image: url(../assert/bg/winter.jpg);
+        }
+      }
+    }
   }
   .aay-music-wrap {
     @include size(100%, 80px);
-    @include posi(null, 0, 0);
+    @include posi(0, 0);
   }
+}
+
+.rotate-enter {
+  opacity: 0;
+  transform: rotate(360deg) scale(0);
+}
+
+.rotate-enter.rotate-enter-active {
+  opacity: 1;
+  transform: rotate(0deg) scale(1);
+  transition: 800ms ease-out;
+}
+
+.rotate-exit {
+  opacity: 1;
+  transform: rotate(-360deg) scale(1);
+}
+
+.rotate-exit.rotate-exit-active {
+  opacity: 0;
+  transform: rotate(0deg) scale(0);
+  transition: 800ms ease-out;
 }
