--- a/src/scss/season.scss
+++ b/src/scss/season.scss
@@ -1,29 +1,37 @@
-.all-about-you {
+.season-all {
   height: 100%;
-  .aay-top {
+
+  .sa-top {
     height: 100%;
+
     > div {
       height: 100%;
+
       .all {
         @include posi(0, 0);
         @include square(100%);
       }
+
       .season-wrap {
         height: 100%;
         background-size: cover;
+
         &.summer {
           background-image: url(../assert/bg/summer.jpg);
         }
-        &.autumn{
+
+        &.autumn {
           background-image: url(../assert/bg/autumn.jpg);
         }
-        &.winter{
+
+        &.winter {
           background-image: url(../assert/bg/winter.jpg);
         }
       }
     }
   }
-  .aay-music-wrap {
+
+  .sa-music-wrap {
     @include size(100%, 80px);
     @include posi(0, 0);
   }
