loading && 粒子动画优化

--- a/src/scss/core/mixin/_button.scss
+++ b/src/scss/core/mixin/_button.scss
@@ -60,15 +60,7 @@
 }
 
 // Button 大小调整
-@mixin button-size(
-  $padding-vertical,
-  $padding-horizontal,
-  $font-size,
-  $line-height,
-  $border-radius
-) {
+@mixin button-size($padding-vertical, $padding-horizontal, $border-radius) {
   padding: $padding-vertical $padding-horizontal;
-  font-size: $font-size;
-  line-height: $line-height;
   border-radius: $border-radius;
 }
