--- a/src/scss/loading.scss
+++ b/src/scss/loading.scss
@@ -1,8 +1,163 @@
 .loading {
   height: 100%;
+  background-color: #fff;
+  background-image: url(http://cdn.acohome.cn/whiteBg.jpg);
+  background-size: cover;
+  .animate-btn-all {
+    height: 100%;
+    .animate-wrap {
+      transform: translate(24px);
+    }
+    .col {
+      font-size: 0;
+      display: inline-block;
+      @for $index from 1 through 4 {
+        &:nth-child(#{$index}) .aw-square {
+          animation-name: loading#{$index};
+        }
+      }
+    }
+    .aw-square {
+      @include square(40px);
+      background: #fff;
+      margin: 0 4px 8px;
+      border-radius: 4px;
+      animation: 2s infinite ease-in;
+      overflow: hidden;
+      transition: 1s;
+      &.unloaded {
+        opacity: 0.2;
+      }
+      &.loaded {
+        opacity: 0.9;
+      }
+      @for $index from 1 through 4 {
+        &:nth-child(#{$index}) {
+          animation-delay: ($index - 1) * 0.15s;
+        }
+      }
+    }
+    .aba-btn-wrap {
+      @include posi(80%, 0);
+    }
+    .btn {
+      opacity: 0.9;
+      margin: 4px;
+      line-height: 40px;
+      height: 40px;
+      border-radius: 8px;
+      font-size: 20px;
+      transition: color 0.4s;
+    }
+    .cake-btn {
+      @include button-variant(#fff, #f68787, #f68787);
+      background-image: url('http://cdn.acohome.cn/cross-scratches.png');
+    }
+    .next-btn {
+      @include button-variant(#fff, #8ed6ff, #8ed6ff);
+      background-image: url('http://cdn.acohome.cn/back-pattern.png');
+    }
+    .music-btn {
+      @include button-variant(#fff, #fccb8f, #fccb8f);
+      background-image: url('http://cdn.acohome.cn/crossword.png');
+      position: relative;
+      &::before,
+      &::after {
+        opacity: 0;
+        content: '';
+        display: block;
+        position: absolute;
+        width: 20px;
+        height: 4px;
+        border-radius: 2px;
+        background-color: #fff;
+        transition: 0.4s;
+        top: 0;
+        left: 0;
+        transform: none;
+      }
+      &.music-icon {
+        &::before,
+        &::after {
+          opacity: 1;
+        }
+      }
+      &.music-stop {
+        &::before {
+          transform: rotate(90deg);
+          top: 17px;
+          left: 3px;
+        }
+        &::after {
+          transform: rotate(-90deg);
+          top: 17px;
+          left: 15px;
+        }
+      }
+      &.music-start {
+        &::before {
+          transform: rotate(40deg);
+          top: 12px;
+          left: 10px;
+        }
+        &::after {
+          transform: rotate(-40deg);
+          top: 23px;
+          left: 10px;
+        }
+      }
+    }
+  }
+}
 
-  .canvas-wrap {
-    @include posi(0, 0);
-    @include square(100%);
+@keyframes loading1 {
+  0%,
+  5%,
+  95%,
+  100% {
+    transform: translate(0px, 0px) rotate(0deg);
+  }
+  30%,
+  70% {
+    transform: translate(-40px, 0px) rotate(-90deg);
+  }
+}
+
+@keyframes loading2 {
+  0%,
+  10%,
+  90%,
+  100% {
+    transform: translate(0px, 0px) rotate(0deg);
+  }
+  35%,
+  65% {
+    transform: translate(-40px, 0px) rotate(-90deg);
+  }
+}
+
+@keyframes loading3 {
+  0%,
+  15%,
+  85%,
+  100% {
+    transform: translate(0px, 0px) rotate(0deg);
+  }
+  40%,
+  60% {
+    transform: translate(-40px, 0px) rotate(-90deg);
+  }
+}
+
+@keyframes loading4 {
+  0%,
+  20%,
+  80%,
+  100% {
+    transform: translate(0px, 0px) rotate(0deg);
+  }
+  45%,
+  55% {
+    transform: translate(-40px, 0px) rotate(-90deg);
   }
 }
