--- a/src/scss/spring.scss
+++ b/src/scss/spring.scss
@@ -1,6 +1,6 @@
 .spring {
   background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAADCAYAAABWKLW/AAAAFklEQVQIHWNgYGBI+///PwMIgwmsHAC5exhP0nQwxgAAAABJRU5ErkJggg=='),
-    url(http://cdn.acohome.cn/spring.jpg);
+    url(http://cdn.acohome.cn/color.jpg);
   background-repeat: repeat, repeat;
-  background-size: 2px 2px, 600px 600px;
+  background-size: 2px 2px, cover;
 }
