--- a/src/scss/audio.scss
+++ b/src/scss/audio.scss
@@ -2,23 +2,32 @@
   @include square(100%);
   @extend .x-center;
   .awa-wrap {
-    @include size(fit-content, 50px);
     border-radius: 25px;
-    background: #eee;
+    height: 30px;
+    padding: 2px;
+    box-sizing: content-box;
+    background: rgba(200, 200, 200, 0.3);
+    transition: 0.4s;
     cursor: pointer;
-    opacity: 0.6;
     audio {
       display: none;
     }
     .awa-icon {
-      @include circle(50px);
-      opacity: 0.8;
+      @include circle(30px);
+    }
+    &.pause,
+    &.play:hover {
+      opacity: 1;
+      transform: scale(1.2);
+    }
+    &.play {
+      opacity: 0.5;
+      transform: none;
     }
   }
   .awa-canvas {
-    @include square(300px);
+    @include square(100px);
     @include posi(50%, 50%);
     transform: translate3d(-50%, -50%, 0);
-    opacity: 0.8;
   }
 }
