--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -8,6 +8,8 @@
 @import './music';
 @import './loading';
 @import './cake';
+@import './spring';
+@import './summer';
 
 .p-a-all {
   @include posi(0, 0);
