--- a/src/scss/core/_buttons.scss
+++ b/src/scss/core/_buttons.scss
@@ -1,8 +1,9 @@
 @charset "utf-8";
 
-@import './mixin/button';
+@import "./mixin/button";
 
 // Buttons
+//
 // Base styles 初始类，用于button元素
 // 规定4个伪类的基本样式 :active, :focus, :hover, disabled
 // 4个基本的类对应相应的伪类 .active, .focus, .hover, .disabled
@@ -18,11 +19,8 @@
   white-space: nowrap;
   user-select: none;
   box-sizing: border-box;
-  @include button-variant(
-    $btn-default-color,
-    $btn-default-bg,
-    $btn-default-border
-  );
+  border-radius: $btn-border-radius-base;
+  @include button-variant($btn-default-bg, $btn-default-border);
 
   &,
   &:active,
@@ -66,12 +64,4 @@ a.btn {
 .btn-block {
   display: block;
   width: 100%;
-}
-
-@mixin make-button-list($color-list) {
-  @each $name, $color in $color-list {
-    .btn-#{'' + $name} {
-      @include button-variant(#fff, $color, darken($color, 10%));
-    }
-  }
 }
