--- a/src/scss/core/_useFullClass.scss
+++ b/src/scss/core/_useFullClass.scss
@@ -1,68 +1,68 @@
 @charset "utf-8";
 
-.b-c {
+.x-b-c {
   margin: 0 auto;
 }
 
-.t-r {
+.x-t-r {
   text-align: right;
 }
 
-.t-c {
+.x-t-c {
   text-align: center;
 }
 
-.f-l {
+.x-f-l {
   float: left;
 }
 
-.f-r {
+.x-f-r {
   float: right;
 }
 
-.p-a {
+.x-p-a {
   position: absolute;
 }
 
-.p-r {
+.x-p-r {
   position: relative;
 }
 
 /* 提供 5 - 50 的 padding/margin 简写 */
 @for $i from 1 through 10 {
-  .p-t-#{$i*5} {
+  .x-p-t-#{$i*5} {
     padding-top: $i * 5px;
   }
-  .p-b-#{$i*5} {
+  .x-p-b-#{$i*5} {
     padding-bottom: $i * 5px;
   }
-  .p-r-#{$i*5} {
+  .x-p-r-#{$i*5} {
     padding-right: $i * 5px;
   }
-  .p-l-#{$i*5} {
+  .x-p-l-#{$i*5} {
     padding-left: $i * 5px;
   }
-  .m-t-#{$i*5} {
+  .x-m-t-#{$i*5} {
     margin-top: $i * 5px;
   }
-  .m-b-#{$i*5} {
+  .x-m-b-#{$i*5} {
     margin-bottom: $i * 5px;
   }
-  .m-r-#{$i*5} {
+  .x-m-r-#{$i*5} {
     margin-right: $i * 5px;
   }
-  .m-l-#{$i*5} {
+  .x-m-l-#{$i*5} {
     margin-left: $i * 5px;
   }
 }
 
-// 提供 12 - 40 双字号的简写
-@for $i from 0 through 11 {
-  .f-s-#{$i*2 + 18} {
-    font-size: $i * 2+18px;
+// 提供 12 - 30 双字号的简写
+@for $i from 0 through 6 {
+  .x-f-s-#{$i * 2 + 18} {
+    font-size: $i * 2 + 18px;
   }
 }
 
-.t-in-one-line {
+.x-ellipsis {
   @include ellipsis();
 }
