--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -2,13 +2,9 @@ body,
 html,
 #root,
 .app {
-  @include size(100%, 100%);
+  @include size(100%);
 }
 
 body {
   overflow: hidden;
-}
-
-.app {
-  position: relative;
 }
