--- a/src/scss/audio.scss
+++ b/src/scss/audio.scss
@@ -1,5 +1,5 @@
 .audio-wrap-all {
-  @include square(100%);
+  @include size(100%);
   @extend .x-center;
   .awa-wrap {
     border-radius: 25px;
@@ -26,7 +26,7 @@
     }
   }
   .awa-canvas {
-    @include square(100px);
+    @include size(100px);
     @include posi(0, 0);
   }
 }
