--- a/src/scss/wwsty.scss
+++ b/src/scss/wwsty.scss
@@ -1,26 +1,27 @@
 .wwsty-all {
   height: 100%;
   > canvas {
-    @include square(100%);
+    @include size(100%);
   }
   .prev,
   .next {
-    @include square(100px);
+    @include size(100px);
     transform: translateY(-50%);
     opacity: 0.8;
     border-radius: 16px;
     border-width: 4px;
     position: relative;
-    @include button-variant(#fff, #ffcece, darken(#ffcece, 10));
+    color: #fff;
+    @include button-variant(#ffcece, darken(#ffcece, 10));
     transition: 0.4s;
     &.disabled {
       pointer-events: none;
       cursor: not-allowed;
-      @include button-variant(#fff, #f5f5f5, darken(#f5f5f5, 10));
+      @include button-variant(#f5f5f5, darken(#f5f5f5, 10));
     }
     &::before,
     &::after {
-      content: '';
+      content: "";
       display: block;
       position: absolute;
       width: 40px;
