--- a/src/scss/summer.scss
+++ b/src/scss/summer.scss
@@ -1,5 +1,5 @@
 .summer {
-  // background-image: url('../assert/image/summerBg.jpg');
+  background-image: url('../assert/image/summerBg.jpg');
   background-repeat: repeat;
   background-size: cover;
 }
